--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 			<p>Click a Pokémon's name to see its detailed Pokédex page, or click a type to see other pokemon of the same
 				type. See also:
 				<a href="https://pokemondb.net/pokedex/all">Pokédex with stats</a>.</p>
-		</div>
+		</div>infocard-list infocard-list-pkmn-lg
 		<hr>
 		<h2 id="gen-1">Generation 1 Pokémon</h2>
-		<div class="infocard-list infocard-list-pkmn-lg">
+		<div class="infocard">
 			<div class="infocard "><span class="infocard-lg-img"><a href="https://pokemondb.net/pokedex/bulbasaur"><img
 							class="img-fixed img-sprite"
 							src="assets/bulbasaur.png"
